# LaVissa-Iron-Butterfly-Edition

./: .gitignore  Attribution and Priority  LAWS.md  LICENSE-DOCS  Optional  README.md  pyproject.toml
.github/workflows/: ci.yml
experiments/ experiments/computation/: README.md
experiments/biology/: README.md
experiments/control/: README.md
experiments/cosmology/: README.md  trp_cosmology_demo.py
experiments/quantum/: README.md
lavissa_core/: __init__.py  collapse_law.py  eternity_engine.py  trp_core.py
lavissa_core/utils/: __init__.py
math/: README.md
math/abc_beal/: README.md  conjecture.md  evidence.md
math/collapse_general/: README.md  definitions.md  open_questions.md  theorems.md
math/collatz/: README.md  evidence.md
math/control/: README.md  evidence.md  principles.md
math/riemann/: README.md  conjecture.md  evidence.md
math/twin_prime/: README.md  conjecture.md  evidence.md
math/twin_prime/math/collatz/: conjecture.md
modules/celliq/: __init__.py
modules/sentience/: __init__.py
modules/trp/: __init__.py  cosmology_trp.py
modules/wateriq/: __init__.py
papers/2025_vireon_trp/: vireon_trp.bib  vireon_trp.tex —
tests/: test_collapse_law.py  test_trp_core.py
